<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/rate"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/rate"
        app:showAsAction="always"

        />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/moreApp"
        android:icon="@drawable/ic_apps_black_24dp"
        android:title="@string/more_apps"
        app:showAsAction="always" />
    <item
        android:id="@+id/privacy_policy"
        android:icon="@drawable/ic_lock_outline_black_24dp"
        android:title="@string/privacy_policy"
        app:showAsAction="always" />
</menu>